# cpp_project-black-navy-war

./: CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  application.cpp  demo  presentation.url
app/: application.cpp
include/graphics/: index_buffer.hpp  renderer.hpp  shader.hpp  vertex_buffer.hpp
include/logics/: Unit.hpp  game.hpp  naval_base.hpp  resources.hpp
src/: index_buffer.cpp  renderer.cpp  shader.cpp  vertex_buffer.cpp
src/graphics/: renderer.cpp  shader.cpp
src/logics/: Unit.cpp  game.cpp  naval_base.cpp  resources.cpp
